--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ICICB DEX",
-  "name": "ICICB DEX",
+  "short_name": "Babylon DEX",
+  "name": "Babylon DEX",
   "icons": [
     {
       "src": "./favicon.ico",
