--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "icicbdex",
+  "name": "babylonswap",
   "description": "AMM Interface",
   "homepage": ".",
   "private": true,
   "dependencies": {
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
-    "@pancakeswap-libs/sdk": "icicbltd/icicb-dex-sdk",
-    "@pancakeswap-libs/uikit": "icicbltd/icicb-uikit",
+    "@pancakeswap-libs/sdk": "loganworld/babylonswap-sdk",
+    "@pancakeswap-libs/uikit": "loganworld/babylonswap-uikit",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
