--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "bignumber.js": "^9.0.0",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
-    "ethers": "^5.0.7",
+    "ethers": "^5.6.4",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
@@ -53,6 +53,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
     "react-i18next": "^10.7.0",
+    "react-notifications": "^1.7.3",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
