--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.2",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "video-player-for-react": "^1.0.7"
   },
   "devDependencies": {
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
