--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-feather": "^2.0.8",
     "react-i18next": "^10.7.0",
     "react-notifications": "^1.7.3",
+    "react-player": "^2.10.1",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
@@ -66,8 +67,7 @@
     "redux-localstorage-simple": "^2.3.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.4.2",
-    "universal-cookie": "^4.0.4",
-    "video-player-for-react": "^1.0.7"
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
